    processing.
  * backends/fake/test-package: Write log file into output dir, like adt-run.
  * Move test result evaluation, log and meta data creation from debci-test to
    debci-generate-indexes. This prepares the way for running adt-run
    asynchronously or remotely, and picking up the results from the
    autopkgtest/ data directory.
  * app.js: In the per-package test list, add link to autopkgtest files
    (artifacts).
  * debci-status --all: Output a list also if there is only one package.
  * debci-status --all: Sort package names so that they appear sorted in the
    web UI.

  [ Antonio Terceiro ]
  * schroot backend: pass --session-id to adt-virt-schroot. This makes it
    easier to debug test suite that leave rogue schroot sessions behind.
  * rename `debci` binary to `debci-batch`. `debci` stays reserved for
    providing a entry point binary like `git` that will invoke subcommands
    that are kept out of $PATH to avoid cluttering the namespace.
  * debci-batch: make batch locking suite- and architecture-specific
  * debci-batch: add --offline and --online options. --offline will prevent
    new test runs from being started, and --online will revert to normal
    operation.
  * Rename scripts/*:
    - scripts/process-package: absorbed by the previously almost empty
      bin/debci-test
    - scripts/list-dep8-packages: absorbed by the previously almost empty
      bin/debci-list-packages
    - scripts/list-dependencies  → bin/debci-list-dependencies
    - scripts/setup-chdist       → bin/debci-setup-chdist
    - scripts/blame              → bin/debci-blame
    - scripts/cleanup            → bin/debci-cleanup
    - scripts/generate-index     → bin/debci-generate-index
  * add `debci` binary to not clutter the namespace. When you call `debci
    COMMAND` it will set PATH to include the debci bin/ and then call
    `debci-COMMAND` with the supplied arguments.
  * debci-blame: replace usage of deprecated IO#lines method with IO#each_line